# batsview

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
bridge/: batsview_bridge.py  requirements-build.txt
scripts/: package.py
src/: annotations.rs  app.rs  bridge.rs  camera3d.rs  catalog.rs  export.rs  loader.rs  main.rs  plot.wgsl  plot_ui.rs  probe.rs  protocol.rs  render.rs  render3d.rs  scene.rs  scene3d.wgsl  streamlines.rs
tests/: test_bridge.py
