[package]
name = "batsview"
version = "0.1.0"
edition = "2024"
description = "Fast cross-platform viewer for BATS-R-US plot files"
license = "MIT"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.25", features = ["derive"] }
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "persistence", "wgpu", "wayland", "x11"] }
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.24"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
